--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,7 +130,7 @@
       <% @items.each do |item| %>
 
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
@@ -158,6 +158,7 @@
         </div>
         <% end %>
       </li>
+
 
       <% if @items.blank? %>
       <li class='list'>
